# Triangles-Vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  double.hpp  main  main.cpp  test  test.txt  test_creater.cpp  triangle.cpp  triangle.hpp
src/: main.cpp
src/lib/: CMakeLists.txt  intersect.cpp  line.hpp  plane.cpp  plane.hpp  segment.hpp  triangle.cpp  triangle.hpp  vector.cpp  vector.hpp
src/test/: test  test.txt  test_creater.cpp
test/: BigTest.txt  CMakeLists.txt  pntXpnt.txt  segXpnt.txt  segXseg.txt  trXpnt.txt  trXseg.txt  trXtr2d.txt  trXtr3d.txt
test/src/: gtest.cpp  test_creater.cpp
tests/: CMakeLists.txt
tests/src/: gtest.cpp  test_creater.cpp
triangles/: CMakeLists.txt
triangles/include/: intersect.hpp  line.hpp  octree.hpp  plane.hpp  segment.hpp  triangle.hpp  utility.hpp  vector.hpp
triangles/src/: CMakeLists.txt  intersect.cpp  main.cpp  octree.cpp  segment.cpp  vulkan.cpp
vulkan/: .gitignore  CMakeLists.txt  Makefile  main.cpp  vulkan.cpp
vulkan/GeomLib/: application.cpp  vector.cpp  window.cpp
vulkan/GeomLib/include/: intersect.hpp  triangle.hpp  utility.hpp
vulkan/GeomLib/src/: intersect.cpp  line.cpp
vulkan/SimpleEngineCore/: CMakeLists.txt
vulkan/SimpleEngineCore/includes/: Application.hpp  Camera.hpp  Event.hpp  Input.hpp  Log.hpp
vulkan/SimpleEngineCore/includes/SimpleEngineCore/: Application.hpp  Event.hpp
vulkan/SimpleEngineCore/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
vulkan/SimpleEngineCore/src/: Application.cpp  Camera.cpp  Input.cpp  Window.cpp  Window.hpp  sourcePath.h
vulkan/SimpleEngineCore/src/Rendering/Vulkan/: DebugMessenger.hpp  Device.hpp  Instance.hpp  Surface.hpp  Swapchain.hpp  ValidationLayer.hpp  VertexArray.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanUtility.hpp  WindowSurface.hpp
vulkan/SimpleEngineCore/src/SimpleEngineCore/: Application.cpp  Window.hpp  sourcePath.h.in
vulkan/SimpleEngineCore/src/SimpleEngineCore/Modules/: UIModule.cpp  UIModule.hpp
vulkan/SimpleEngineCore/src/SimpleEngineCore/Rendering/OpenGL/: VertexBuffer.hpp
vulkan/SimpleEngineCore/src/SimpleEngineCore/Rendering/Vulkan/: VertexArray.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  vulkan.cpp
vulkan/SimpleEngineEditor/: CMakeLists.txt
vulkan/SimpleEngineEditor/src/: VkEngineEditor.cpp
vulkan/include/: Event.hpp  application.hpp  intersect.hpp  log.hpp  octree.hpp  sourcePath.h  window.hpp
vulkan/shaders/: shader.frag
vulkan/src/: application.cpp  intersect.cpp  vulkan.cpp
